# spotify-seasonal-playlists

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  requirements.txt.backup  run.sh  sqlite_schema.sql
.github/workflows/: format.yml
backend/: DatabaseCacheHandler.py  config.py  database.py  playlist.py  saved_songs.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  page.tsx
frontend/app/login/: page.tsx
src/: DatabaseCacheHandler.py  app.py  config.py  constant.py  create_tokens_table.py  database.py  playlist.py  saved_songs.py  web_auth.py
src/templates/: admin.html  admin_errors.html  auth_fail.html  auth_success.html  dashboard.html  index.html  logout_fail.html  logout_sucess.html
tests/: test_database.py
