[tool.poetry]
name = "spotify-new-music-sorter"
version = "0.1.0"
description = "Automatically adds liked songs to playlists grouped by seasons"
authors = ["Terence Tong <tjtong2006@gmail.com>", "Jason Wong <jayywong92@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.8"
spotipy = "^2.23.0"
Flask = "^2.3.2"
requests = "^2.31.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
